Added admin functions and some fixes with models

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -34,12 +34,12 @@
     </button>
     <% end %> 
 
-    <%= form_with url: "/courses/add_user/#{@course.id}", method: :post do |form| %>
+    <%= form_with url: "/admins/add_user/#{@course.id}", method: :post do |form| %>
     <button type="submit" class="btn btn-outline-light me-2 text-bg-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Добавить сотрудника в курс
     </button>
     <% end %> 
-    <%= form_with url: "/courses/remove_user/#{@course.id}", method: :post do |form| %>
+    <%= form_with url: "/admins/remove_user/#{@course.id}", method: :post do |form| %>
     <button type="submit" class="btn btn-outline-light me-2 text-bg-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Убрать сотрудника из курса
     </button>
