--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -30,7 +30,19 @@
     <span class="theory__description"><%= @lesson.main %></span>
   </div>
 
-<% if Test.find_by(lesson_id: @lesson.id) != nil%>
+<% if Test.find_by(lesson_id: @lesson.id) != nil && current_user.role == 2%>
+  <div class = "theory__areas">
+    <span class="theory__number">4</span>
+    <span class="theory__description"><span class="lesson__quiz__title">Тест по уроку</span></span>
+    <div class="lesson__buttons">
+      <%= button_to "Перейти", "/tests/show/#{@lesson.id}", method: :get,class: "btn btn-outline-light me-2 text-bg-dark" %>
+    </div>
+    <%= form_with url: "/tests/destroy/#{@lesson.id}", method: :post do |form| %>
+        <button type="submit" class="btn btn-outline-light me-2 text-bg-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Удалить</button>
+    <% end %> 
+  </div>
+</div>
+<% elsif Test.find_by(lesson_id: @lesson.id) != nil%>
   <div class = "theory__areas">
     <span class="theory__number">4</span>
     <span class="theory__description"><span class="lesson__quiz__title">Тест по уроку</span></span>
