--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,12 +1,5 @@
-<script>
-    function generatePDF() {
-        const element = document.getElementById('invoice');
-        html2pdf()
-            .from(element)
-            .save("Ratings.pdf");
-    }
-</script>
 
+<div class="kaif">asd</div>
 <div id="invoice">
   <table class="table">
     <thead>
